# flet-github-action-workflows

./: flutter_native_splash.yaml  pyproject.toml
src/: main.py
