[project]
name = "star"
version = "0.1.0"   # Build Version. Update for each new release of your app.
description = "Professional AI-Powered Astrology Readings."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Li Jun", email = "50769530@qq.com" }
]
dependencies = [
    "flet==0.86.0",
    "requests",
    "zai"
]

[dependency-groups]
dev = [
    "flet[all]==0.86.0"
]

# Docs: https://docs.flet.dev/publish

[tool.flet]
build_number = 1
product = "star"

[tool.flet.app]
path = "src"

[tool.flet.flutter.pubspec.dependency_overrides]
flet = { git = { url = "https://github.com/flet-dev/flet.git", ref = "main", path = "packages/flet" } }
